kustomize/overlays/sms-api-eks/nats-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  selector:
    app: nats
  ports:
    - name: nats
      protocol: TCP
      port: 4222
      targetPort: 4222
      nodePort: 30050 # unique port for same cluster across different namespaces
  type: NodePort
