kustomize/overlays/sms-api-eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    app: api-ingress
  annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:564519194679:certificate/59934c30-49ce-4848-af1c-bd268a1ee8df
spec:
  ingressClassName: alb
  rules:
    - host: sms.jcschaff.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
